# pitwall

./: .coverage  .firebaserc  .gitignore  CHANGELOG.md  Performance-Driving-Illustrated-2-23-24.txt  README.md  coverage.xml  default.profraw  firebase.json  metrics.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
android/: settings.gradle.kts
android-app/: .gitignore  PWA_UX_GOALS.md  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
android-llm-service/: build.gradle.kts  gradle.properties  settings.gradle.kts
data/: DERIVED_FEATURES.md
docs/: AUDIT.md  adk-agent-architecture.md  adk-implementation-plan.md  android_native_can_usb_shim_plan.md  android_parallel_llm_install.md  api.md  architecture.md  coaching-engine.md  feedback-system.md  hardware.md  index.md  internal_architecture.md  litert_termux_validation.md  markers.md  ml-models.md  model-methodology.md  pedagogy.md  pitwall-web-design.md  sonoma_maneuvers.md  sonoma_track_intelligence.md  sprint-plan.md  stack.md  telemetry-pipeline.md  transcript.txt  trod_sonoma_session.md  ux.md
flutter/: README.md  pubspec.yaml
ml/: kaggle_train.py  train_models.py
pitwall-web/: README.md  package-lock.json  package.json  vite.config.ts
scratch/: append_conftest.py  coverage_output.txt  old_test.py  split_tests.py  test_output.txt
scripts/: best_sonoma_lap.py  bulk_import_sonoma_vbos.py  extract_gold_lap.py  extract_marker_thumbnails.py  import_sonoma_real_gps.py  setup_termux.sh
tests/: conftest.py  test_adk.py  test_analytics.py  test_bridge.py  test_can_pipeline.py  test_coach_engine.py  (+13 more)
(+805 files in other folders)
